Fixed epilectic effect on heading on mobile phones

--- a/client/src/components/Hero/HeroCSS.scss
+++ b/client/src/components/Hero/HeroCSS.scss
@@ -41,6 +41,33 @@
     text-shadow: -3px 0 #4795dd, 3px 3px #0c9400;
     animation: glitch-anim2 1s infinite linear alternate-reverse;
   }
+
+  @media screen and (max-width: 576px) {
+    animation: glitch-skew 0s; 
+
+    &::before{
+      // Duplicates our text with the mixin.
+      @include glitchCopy;
+      // Scoots text slightly to the left for the color offset.
+      left: 2px;
+      // Creates the color 'shadow' that happens on the glitch.
+      text-shadow: -2px 0 #0c9400;
+      /* Creates an initial clip for our glitch. This works in
+      a typical top,right,bottom,left fashion and creates a mask
+      to only show a certain part of the glitch at a time. */
+      clip: rect(44px, 450px, 56px, 0);
+      /* Runs our glitch-anim defined below to run in a 5s loop, infinitely,
+      with an alternating animation to keep things fresh. */
+      animation: glitch-anim 5s infinite linear alternate-reverse;
+    }
+
+    &::after {
+      @include glitchCopy;
+      left: -2px;
+      text-shadow: -2px 0 #4795dd, 2px 2px #0c9400;
+      animation: glitch-anim2 1s infinite linear alternate-reverse;
+    }
+  }
 }
 
 /* Creates an animation with 20 steps. For each step, it calculates 
@@ -70,7 +97,7 @@ skew to change the 'thickness' of the glitch.*/
 
 // Does the same deal as before, but now only skews. Used for main text.
 @keyframes glitch-skew {
-  $steps: 3;
+  $steps: 10;
   @for $i from 0 through $steps {
     #{percentage($i*calc(1 / $steps))} {
       transform: skew((random(10) - 5) + deg);
